<?xml version="1.0"?>
<package format="2">
  <name>path_follower</name>
  <version>0.0.0</version>
  <description>The path_follower package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>project11</depend>
  <depend>project11_navigation</depend>
  <depend>roscpp</depend>
  
  <export>
    <project11_navigation plugin="${prefix}/path_follower_plugin.xml"/>
    <behaviortree_cpp bt_lib_plugin="libpath_follower_bt"/>
  </export>
</package>
